[package]
name = "cargo-rune"
description = "A Cargo extension for the Rune language with some helpful tools"
version = "0.1.1"
authors = ["Will Toll <will@wtoll.com>"]
edition = "2018"
documentation = "https://docs.rs/cargo-rune"
readme = "README.md"
homepage = "https://crates.io/crates/cargo-rune"
repository = "https://github.com/Wtoll/cargo-rune"
license = "MIT"
keywords = ["rune", "language", "scripting", "cargo"]
include = ["src/", "LICENSE", "README.md", "COPYRIGHT", "build.rs", ".git"]

build = "build.rs"

[dependencies]
clap = "3.0.0-beta.1"

rune = "0.6.16"
runestick = "0.6.16"

[build-dependencies]
git2 = "0.13.10"
chrono = "0.4"
